--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,17 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(rel='stylesheet' type='text/css' href='node_modules/bulma/css/bulma.min.css')
+    link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav.navbar.is-primary(role='navigation' aria-label='main navigation')
+      a.navbar-burger.burger(role='button' aria-label='menu' aria-expanded='false')
+        span(aria-hidden='true')
+        span(aria-hidden='true')
+        span(aria-hidden='true')
+    div.navbar-menu
+      div.navbar-start
+        a.navbar-item(href='/') Home
+        a.navbar-item(href='/catalog/cases') Cases
+        a.navbar-item(href='/catalog/cpus') CPUs
     block content
