--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,21 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+aside {
+  border: 1px solid black;
+  height: 100%;
+  width: 130px;
+  padding: 8px;
+  background-color: #f5f5f5;
+  position: fixed;
+  z-index: 1;
+  overflow-x: hidden;
+}
+
+.container {
+  margin-left: 130px;
+}
+
+a:hover {
+  color: rgb(123, 123, 255) !important;
 }
