--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div.container
+    section(class='hero is-dark is-bold') 
+      div.hero-body
+        div.container
+          h1.title Welcome to #{title}
