--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,3 +20,12 @@ aside {
 a:hover {
   color: rgb(123, 123, 255) !important;
 }
+
+.inv-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 250px;
+}
