--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
     link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css')
-    link(rel='stylesheet', href='../stylesheets/style.css')
+    link(rel='stylesheet', href='../../stylesheets/style.css')
   body
     aside
       p.menu-label General
