Added create_case form view and controller, fixed error in models that multiplied price too much.  Error happened at some point multiplying base values from populateddb.js again so had to edit the DB to fix.  Didn't edit any values after motherboards so will have to edit them once i get the update_component form added

--- a/views/storage_detail.pug
+++ b/views/storage_detail.pug
@@ -8,6 +8,7 @@ block content
           h1.title.has-text-black #{title}
 
     div.card.bigCard.my-2.px-5.py-2.has-background-primary
+      p #[strong Capcity:] #{storage.capacity}
       p #[strong Type:] #{storage.type} 
       p #[strong Price:] $#{storage.price}
       p #[strong In Stock:] #{storage.amount}
