Added controller for new cpu and new memory, added view for new cpu and new memory, added view file for rest of components

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,3 +44,13 @@ a:hover {
   height: 80%;
   text-align: center;
 }
+
+.field {
+  padding: 20px;
+  width: 70%;
+  margin: auto;
+}
+
+.control {
+  margin-bottom: 1rem;
+}
