--- a/views/case_detail.pug
+++ b/views/case_detail.pug
@@ -12,3 +12,6 @@ block content
       p #[strong Price:] $ #{caseName.price} 
       p #[strong Color:] #{caseName.color}
       p #[strong In Stock:] #{caseName.amount}
+    
+    button.button.is-danger
+      a.has-text-light(href='/catalog/case/delete') Delete Case
