--- a/views/cpu_detail.pug
+++ b/views/cpu_detail.pug
@@ -12,3 +12,6 @@ block content
       p #[strong Clock:] #{cpu.coreClock}
       p #[strong Price:] $#{cpu.price}
       p #[strong In Stock:] #{cpu.amount}
+    
+    button.button.is-danger.mr-5
+      a.has-text-light(href='/catalog/cpu/delete') Delete Case
