--- a/views/case_list.pug
+++ b/views/case_list.pug
@@ -19,3 +19,6 @@ block content
             p #[strong In Stock:] #{caseName.amount}
       else
         li There are no cases.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/case/create') Add New Case
