Added controller and view for creating powersupply, storage, and videocard.  Added create button to rest of the list pages

--- a/views/memory_list.pug
+++ b/views/memory_list.pug
@@ -20,3 +20,6 @@ block content
             p #[strong In stock:] #{memory.amount}
       else
         li There are no memorys.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/memory/create') Add New Memory
