--- a/views/motherboard_list.pug
+++ b/views/motherboard_list.pug
@@ -19,3 +19,6 @@ block content
             p #[strong In Stock:] #{motherboard.amount}
       else
         li There are no motherboards.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/motherboard/create') Add New Motherboard
