--- a/views/peripheral_list.pug
+++ b/views/peripheral_list.pug
@@ -86,3 +86,6 @@ block content
                 p #[strong In Stock:] #{peripheral.amount}
         else
           li There are no speakers.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/peripheral/create') Add New Peripheral
