--- a/views/powerSupply_list.pug
+++ b/views/powerSupply_list.pug
@@ -20,3 +20,6 @@ block content
             p #[strong In Stock:] #{powerSupply.amount}
       else
         li There are no Power Supplys.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/powersupply/create') Add New Power Supply
