--- a/views/videoCard_list.pug
+++ b/views/videoCard_list.pug
@@ -19,3 +19,6 @@ block content
             p #[strong In Stock:] #{videoCard.amount}
       else
         li There are no videoCards.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/videocard/create') Add New Video Card
