--- a/views/cpu_list.pug
+++ b/views/cpu_list.pug
@@ -19,3 +19,6 @@ block content
             p #[strong In Stock:] #{cpu.amount}
       else
         li There are no cpus.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/cpu/create') Add New CPU
