--- a/views/storage_list.pug
+++ b/views/storage_list.pug
@@ -19,3 +19,6 @@ block content
             p #[strong In Stock:] #{storage.amount}
       else
         li There are no storages.
+    
+    button.button.is-link.mx-5.my-2
+      a.has-text-light(href='/catalog/storage/create') Add New Storage
