Added inventory list to home page, added case delete view and controller

--- a/views/case_detail.pug
+++ b/views/case_detail.pug
@@ -14,4 +14,4 @@ block content
       p #[strong In Stock:] #{caseName.amount}
     
     button.button.is-danger
-      a.has-text-light(href='/catalog/case/delete') Delete Case
+      a.has-text-light(href='/catalog/'+caseName.url+'/delete') Delete Case
