Added delete controller and view for other components.

--- a/views/cpu_detail.pug
+++ b/views/cpu_detail.pug
@@ -14,4 +14,4 @@ block content
       p #[strong In Stock:] #{cpu.amount}
     
     button.button.is-danger.mr-5
-      a.has-text-light(href='/catalog/cpu/delete') Delete Case
+      a.has-text-light(href='/catalog/'+cpu.url+'/delete') Delete CPU
