Added controller and updated view for update_case, added update buttons for each component

--- a/views/case_detail.pug
+++ b/views/case_detail.pug
@@ -15,3 +15,5 @@ block content
     
     button.button.is-danger
       a.has-text-light(href='/catalog/'+caseName.url+'/delete') Delete Case
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+caseName.url+'/update') Update Case
