--- a/views/cpu_detail.pug
+++ b/views/cpu_detail.pug
@@ -15,3 +15,5 @@ block content
     
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+cpu.url+'/delete') Delete CPU
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+cpu.url+'/update') Update CPU
