--- a/views/memory_detail.pug
+++ b/views/memory_detail.pug
@@ -16,3 +16,5 @@ block content
     
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+memory.url+'/delete') Delete Memory
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+memory.url+'/update') Update Memory
