--- a/views/powerSupply_detail.pug
+++ b/views/powerSupply_detail.pug
@@ -16,3 +16,5 @@ block content
     
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+powerSupply.url+'/delete') Delete Power Supply
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+caseName.url+'/update') Update Power Supply
