--- a/views/storage_detail.pug
+++ b/views/storage_detail.pug
@@ -15,3 +15,5 @@ block content
     
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+storage.url+'/delete') Delete Storage
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+storage.url+'/update') Update Storage
