--- a/views/videoCard_detail.pug
+++ b/views/videoCard_detail.pug
@@ -15,3 +15,5 @@ block content
     
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+videoCard.url+'/delete') Delete Video Card
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+videoCard.url+'/update') Update Video Card
