--- a/views/case_form.pug
+++ b/views/case_form.pug
@@ -19,9 +19,10 @@ block content
           div.select
             select#type(type='select' placeholder='Select Type' name='type' required='true')
               - types.sort(function(a, b) {let textA = a.toUpperCase(); let textB = b.toUpperCase(); return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;});
+               //- For update form, if a case exists already
               for item in types
                 if newCase
-                  option(value=newCase._id selected=(newCase._id.toString()===newCase._id.toString() ? 'selected' : false)) #{newCase.type}
+                  option(value=item selected=(newCase.type==item) ? 'selected' : false) #{item}
                 else
                   option(value=item) #{item}
         label.label(for='color') Color:
@@ -31,7 +32,7 @@ block content
                 - colors.sort(function(a, b) {let textA = a.toUpperCase(); let textB = b.toUpperCase(); return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;});
                 for item in colors
                   if newCase
-                    option(value=newCase._id selected=(newCase._id.toString()===newCase._id.toString() ? 'selected' : false)) #{newCase.color}
+                    option(value=item selected=(newCase.color===item) ? 'selected' : false) #{item}
                   else
                     option(value=item) #{item}
         label.label(for='price') Price:
