--- a/views/motherboard_detail.pug
+++ b/views/motherboard_detail.pug
@@ -15,3 +15,5 @@ block content
     
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+motherboard.url+'/delete') Delete Motherboard
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+motherboard.url+'/update') Update Motherboard
