--- a/views/peripheral_detail.pug
+++ b/views/peripheral_detail.pug
@@ -15,3 +15,5 @@ block content
     
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+peripheral.url+'/delete') Delete Peripheral
+    button.button.is-primary
+      a.has-text-light(href='/catalog/'+peripheral.url+'/update') Update Peripheral
