--- a/views/cpu_detail.pug
+++ b/views/cpu_detail.pug
@@ -9,7 +9,7 @@ block content
 
     div.card.bigCard.my-2.px-5.py-2.has-background-primary
       p #[strong Cores:] #{cpu.coreCount} 
-      p #[strong Clock:] #{cpu.coreClock}
+      p #[strong Clock:] #{cpu.coreClock} GHz
       p #[strong Price:] $#{cpu.price}
       p #[strong In Stock:] #{cpu.amount}
     
