--- a/views/cpu_list.pug
+++ b/views/cpu_list.pug
@@ -14,7 +14,7 @@ block content
           div.card.mx-5.my-2.px-5.py-2.has-background-primary
             a(href=cpu.url) #[strong #{cpu.manufacturer} #{cpu.name}]
             p #[strong Cores:] #{cpu.coreCount} 
-            p #[strong Clock:] #{cpu.coreClock}
+            p #[strong Clock:] #{cpu.coreClock} GHz
             p #[strong Price:] $#{cpu.price}
             p #[strong In Stock:] #{cpu.amount}
       else
