--- a/views/powerSupply_detail.pug
+++ b/views/powerSupply_detail.pug
@@ -17,4 +17,4 @@ block content
     button.button.is-danger.mr-5
       a.has-text-light(href='/catalog/'+powerSupply.url+'/delete') Delete Power Supply
     button.button.is-primary
-      a.has-text-light(href='/catalog/'+caseName.url+'/update') Update Power Supply
+      a.has-text-light(href='/catalog/'+powerSupply.url+'/update') Update Power Supply
